--- a/admin/assets/css/style.sea.css
+++ b/admin/assets/css/style.sea.css
@@ -26,6 +26,12 @@
 .lh-2 {
   line-height: 2;
 }
+.line {
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px dashed #eee;
+  margin: 20px 0 30px;
+}
 
 a {
   display: inline-block;
