--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,11 @@ a:link {
     z-index: 100;
 }
 
+#i-p #navigation {
+    background-color: #0b1921;
+    position: relative;
+}
+
 .navigation-inner {
     width: 94%;
     max-width: 1100px;
