--- a/assets/css/account.css
+++ b/assets/css/account.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -377,4 +383,143 @@ h1,h2,h3,h4,h5,h6,p{
     font-size: 12px;
     text-transform: uppercase;
     padding: 2em 1em;
+}
+
+/* Participation */
+
+.form-row-checks-all {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.form-row-check {
+    flex: 18%;
+    margin: 1% 1%;
+    border: 1px solid #d7d8e2;
+    position: relative;
+}
+.form-row-check input {
+    display: none;
+}
+.form-row-check label {
+    display: block;
+    width: 100%;
+    padding: 1em 2em;
+    cursor: pointer;
+    text-align: center;
+    opacity: 0.7;
+}
+.form-row-check label:hover {
+    opacity: 1;
+}
+
+.form-row-check label .comp-head-cat {
+    display: table;
+    margin: 0 auto;
+    background-color: #85ab30;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #ffffff;
+    font-weight: 400;
+    padding: 0.1em 1em;
+}
+.form-row-check label .comp-title {
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #0b1921;
+    font-weight: 900;
+    padding: 0.1em 1em;
+}
+
+.form-row-check label .comp-members {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-row-check label .comp-mem-box {
+    text-transform: uppercase;
+    position: relative;
+}
+.form-row-check label .comp-mem-box::before {
+    content: "";
+    width: 8px;
+    height: 2px;
+    right: -10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #0080c4;
+    position: absolute;
+}
+.form-row-check label .comp-mem-box span {
+    font-weight: 700;
+}
+.comp-price {
+    display: flex;
+    align-items: center;
+}
+.comp-abs-check {
+    display: none;
+}
+.comp-price-text {
+    font-weight: 700;
+    font-size: 2em;
+    color: #0b1921;
+}
+.comp-price-text span {
+    font-weight: 300;
+}
+.comp-price-about {
+    background-color: #f26322;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #ffffff;
+    font-weight: 400;
+    padding: 0.1em 0.5em;
+    margin-left: 0.5em;
+}
+
+.form-row-check input:checked ~ label {
+    background-color: #85ab30;
+    opacity: 1;
+}
+.form-row-check input:checked ~ label .comp-abs-check {
+    position: absolute;
+    display: block;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    left: 5%;
+    top: -15px;
+    background-color: #ffffff;
+    color: #85ab30;
+    font-size: 1.2em;
+    border-radius: 50%;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
+}
+
+.form-row-check input:checked ~ label .comp-head-cat,
+.form-row-check input:checked ~ label .comp-price-about {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.form-row-check input:checked ~ label .comp-title,
+.form-row-check input:checked ~ label .comp-mem-box,
+.form-row-check input:checked ~ label .comp-price-text {
+    color: #ffffff;
+}
+
+.d-form .form-row-checks,
+.d-form .form-submit {
+    margin-top: 4em;
+}
+
+.d-form-body .select-box {
+    flex: 0 0;
+}
+.alotFields {
+    position: relative;
+    width: 100%;
 }
