--- a/assets/css/account.css
+++ b/assets/css/account.css
@@ -161,6 +161,28 @@ h1,h2,h3,h4,h5,h6,p{
     font-weight: 300;
 }
 
+.d-d-value #setamm-open {
+    display: none;
+}
+.d-d-value #setamm-open.select-active {
+    display: inline-block;
+}
+.d-d-value #changeamm {
+    display: inline-block;
+}
+.d-d-value #selectamm {
+    padding: 0.2em 1em;
+    font-family: inherit;
+    font-size: 0.8em;
+    display: block;
+}
+.d-d-value #setamm-open p {
+    font-size: 0.8em;
+    letter-spacing: 1px;
+    color: #0b1921;
+    font-weight: 300;
+}
+
 .d-d-value a {
     color: #ffffff;
     background-color: #0b1921;
@@ -176,7 +198,7 @@ h1,h2,h3,h4,h5,h6,p{
     width: 94%;
     display: flex;
     align-items: baseline;
-    margin-top: 4em;
+    margin: 4em 0 6em 0;
     background-color: #f9f9f9;
     border: 1px solid rgba(11, 25, 33,0.2);
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
