Admin panel - added logs. DB update. Responsive Fixes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,10 @@ a:link {
     position: relative;
 }
 
+.nav-ul ul li a.active {
+    background-color: #19313f;
+}
+
 .nav-ul ul li ul {
     display: none;
 }
