--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -15,7 +15,58 @@
     }
 
     .nav-ul.n-active {
-        
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 200px;
+        height: 100vh;
+        z-index: 100;
+        background-color: rgba(11, 25, 33,0.95);
+    }
+    .nav-ul.nav-ul.n-active::before {
+        content: "";
+        position: absolute;
+        right: 200px;
+        width: calc(100vw - 200px);
+        height: 100vh;
+        background-color: rgba(11, 11, 11, 0.9);
+    }
+
+    .nav-l {
+        flex: 1;
+        display: flex;
+        margin-top: 3em;
+        margin-bottom: 2em;
+    }
+    .nav-ul ul {
+        flex-direction: column;
+    }
+    .nav-ul ul li {
+        margin: 1rem 0;
+    }
+    .nav-ul .nav-l li a {
+        padding: 1em 0.5em;
+    }
+
+    .nav-ul ul.nav-r li {
+        margin: 1rem 0;
+        text-align: center;
+    }
+    .nav-ul ul li a {
+        display: block;
+    }
+    .nav-ul ul.nav-r .reg-btn::before {
+        content: "";
+        width: 100%;
+        height: 2px;
+        background-color: #fff;
+        opacity: 0.1;
+        position: absolute;
+        top: -2em;
+        left: 50%;
+        transform: translateX(-50%);
     }
 
 }
@@ -142,6 +193,7 @@
     .about-video {
         width: 300px;
         margin-top: 2em;
+        margin-left: 0;
         align-self: center;
     }
 
@@ -190,6 +242,17 @@
     .competition-title h1::before {
         height: 2px;
         bottom: -5px;
+    }
+    .competition-box a.comp-btn {
+        display: flex;
+        align-items: center;
+        right: auto;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .competition-box a.comp-btn:hover {
+        right: auto;
+        left: 55%;
     }
 
     .glimpse-row {
@@ -248,5 +311,35 @@
         font-weight: 300;
         letter-spacing: 1px;
     }
+
+}
+
+@media (max-width: 500px){
+
+    .team-boxes {
+        width: 80%;
+    }
+
+    .testimonial-boxes  {
+        width: 90%;
+        margin: 2em auto 0 auto;
+    }
+
+    .testi-box {
+        width: 100%;
+        margin: 8em auto 5em auto;
+    }
+
+    .testi-img {
+        left: 50%;
+        transform: translateX(-50%);
+        top: -80px;
+        width: 60px;
+        height: 60px;
+    }
+    .testi-name {
+        text-align: center;
+    }
+
 
 }
