--- a/assets/css/inner.css
+++ b/assets/css/inner.css
@@ -524,3 +524,12 @@ body {
     font-weight: 400;
     letter-spacing: 1px;
 }
+
+@media screen and (max-width: 700px){
+    .form-row {
+        flex-direction: column;
+    }
+    .form-row .form-row-box:nth-child(2), .form-row .form-row-box:nth-child(3) {
+        margin-left: 0;
+    }
+}
