--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,33 @@
+@media (min-width: 1100px){
+
+    .hasDrops {
+        position: relative;
+    }
+    .nav-ul ul li a.active ~ ul {
+        position: absolute;
+        background: rgba(11, 25, 33,0.95);
+        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25);
+        top: calc(100% + 1rem);
+        width: 200px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .nav-ul ul li a.active ~ ul li {
+        display: flex;
+    }
+    .nav-ul ul li a.active ~ ul li a {
+        padding: 0.5em 0.5em;
+        display: block;
+        text-align: center;
+        width: 100%;
+    }
+    .nav-ul ul li a.active ~ ul li a:hover {
+        background-color: rgba(11, 11, 11, 0.9);
+    }
+    
+
+}
+
 @media (max-width: 1100px) {
     
     .navigation-r {
@@ -24,6 +54,10 @@
         height: 100vh;
         z-index: 100;
         background-color: rgba(11, 25, 33,0.95);
+        padding-bottom: 2em;
+    }
+    .nav-ul .nav-l {
+        overflow: scroll;
     }
     .nav-ul.nav-ul.n-active::before {
         content: "";
@@ -44,7 +78,7 @@
         flex-direction: column;
     }
     .nav-ul ul li {
-        margin: 1rem 0;
+        margin: 0.5rem 0;
     }
     .nav-ul .nav-l li a {
         padding: 1em 0.5em;
