--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,17 @@ a:link {
     display: none;
 }
 
+.nav-ul ul li a.active ~ ul {
+    display: block;
+}
+.nav-ul ul li a.active ~ ul li {
+    margin: 0.5rem 0;
+    border-left: 2px solid #85ab30;
+}
+.nav-ul ul li a.active ~ ul li a {
+    padding: 0.5em 0.5em;
+}
+
 .nav-ul ul.nav-r li {
     margin: 0 1rem;
 }
@@ -491,6 +502,7 @@ a:link {
     width: 60px;
     height: 60px;
     position: absolute;
+    cursor: pointer;
     bottom: -10vh;
     left: 50%;
     transform: translateX(-50%);
@@ -517,6 +529,7 @@ a:link {
     border-bottom: 1px solid #fff;
     border-right: 1px solid #fff;
     opacity: 0.2;
+    pointer-events: none;
 }
 .bottom-scroll-two {
     position: absolute;
@@ -528,6 +541,7 @@ a:link {
     border-bottom: 1px solid #fff;
     border-right: 1px solid #fff;
     opacity: 0.4;
+    pointer-events: none;
 }
 .bottom-scroll-three {
     position: absolute;
@@ -538,6 +552,7 @@ a:link {
     height: 30px;
     border-bottom: 1px solid #fff;
     border-right: 1px solid #fff;
+    pointer-events: none;
 }
 
 
