--- a/assets/css/inner.css
+++ b/assets/css/inner.css
@@ -506,6 +506,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #85ab30;
+
     margin-top: -3em;
 }
 .form-success-text {
@@ -525,6 +526,227 @@ body {
     letter-spacing: 1px;
 }
 
+.content-body {
+    width: 94%;
+    margin: 0 auto;
+    padding: 5em 0;
+}
+
+.category-row {
+    display: flex;
+    border: 1px solid #f4f5ff;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    padding: 2em 2em;
+}
+.category-row:not(:last-child){
+    margin-bottom: 5em;
+}
+
+.category-title {
+    flex: 1;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.category-title h3 {
+    font-size: 1.2em;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #ffffff;
+    padding: 0.4em 1em;
+    background: #0b1921;
+    position: relative;
+    margin-top: 1em;
+}
+
+.category-title h3::before {
+    content: "";
+    width: 30%;
+    height: 1px;
+    background: rgba(255,255,255,0.5);
+    position: absolute;
+    top: 50%;
+    left: -40%;
+}
+.category-title h3::after {
+    content: "";
+    width: 30%;
+    height: 1px;
+    background: rgba(255,255,255,0.5);
+    position: absolute;
+    top: 50%;
+    right: -40%;
+}
+
+.category-title h1 {
+    font-size: 2em;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #ffffff;
+    letter-spacing: 1px;
+    display: table;
+    position: relative;
+    margin-top: 0.7em;
+    margin-bottom: 1em;
+}
+.category-title h1::before {
+    content: "";
+    width: 40%;
+    max-width: 60px;
+    height: 4px;
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    background-color: #0080c4;
+}
+
+.category-competitions {
+    flex: 2;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 2em;
+}
+
+.cat-comp-box {
+    display: flex;
+    flex: 1 1 auto;
+    position: relative;
+    align-items: center;
+    padding: 2em 1em 1em 0em;
+    margin-right: 3em;
+    margin-bottom: 1em;
+    cursor: pointer;
+}
+
+.cat-comp-icon {
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    text-align: center;
+    margin-right: -20px;
+    z-index: 1;
+}
+.cat-comp-icon i {
+    color: #0080c4;
+    font-size: 1.4em;
+    line-height: 34px;
+}
+
+.cat-comp-text {
+    flex: 1;
+    border: 1px solid #f4f5ff;
+    background: #ffffff;
+    transition: 0.2s all;
+    border-radius: 8px;
+}
+
+.cat-comp-text h1 {
+    font-size: 1.4em;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #0b1921;
+    letter-spacing: 1px;
+    display: table;
+    position: relative;
+    margin: 0.7em 2.5em 2em 2.5em;
+}
+
+.cat-comp-text h1::after {
+    content: "";
+    width: 40%;
+    max-width: 40px;
+    height: 3px;
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    background-color: #0080c4;
+}
+
+.cat-comp-text a {
+    position: absolute;
+    bottom: -0.2em;
+    right: -1em;
+    font-size: 0.9em;
+    font-weight: 700;
+    color: #0b1921;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
+    background: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 0.4em 1em 0.3em 2em;
+    border-radius: 2em;
+}
+.cat-comp-text a i {
+    color: #0080c4;
+    margin-left: 2px;
+}
+
+.category-row:nth-child(2) .category-title h1::before {
+    background-color: #f26322;
+}
+.category-row:nth-child(2) .cat-comp-icon i {
+    color: #f26322;
+}
+.category-row:nth-child(2) .cat-comp-text h1::after {
+    background-color: #f26322;
+}
+.category-row:nth-child(2) .cat-comp-text a i {
+    color: #f26322;
+}
+
+.category-row:nth-child(3) .category-title h1::before {
+    background-color: #85ab30;
+}
+.category-row:nth-child(3) .cat-comp-icon i {
+    color: #85ab30;
+}
+.category-row:nth-child(3) .cat-comp-text h1::after {
+    background-color: #85ab30;
+}
+.category-row:nth-child(3) .cat-comp-text a i {
+    color: #85ab30;
+}
+
+
+.cat-comp-box:hover .cat-comp-text {
+    background-color: #0080c4;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+}
+.category-row:nth-child(2) .cat-comp-box:hover .cat-comp-text {
+    background-color: #f26322;
+}
+.category-row:nth-child(3) .cat-comp-box:hover .cat-comp-text {
+    background-color: #85ab30;
+}
+
+.cat-comp-box:hover a {
+    right: 0em;
+}
+.cat-comp-box:hover .cat-comp-text h1 {
+    color: #fff;
+}
+.cat-comp-box:hover .cat-comp-text h1::after {
+    background-color: #fff;
+}
+
+
+@media screen and (max-width: 1100px){
+    .category-title {
+        flex: 1;
+    }
+    .category-competitions {
+        flex: 1;
+    }
+}
+
+
 @media screen and (max-width: 700px){
     .form-row {
         flex-direction: column;
@@ -532,4 +754,10 @@ body {
     .form-row .form-row-box:nth-child(2), .form-row .form-row-box:nth-child(3) {
         margin-left: 0;
     }
+
+    .category-row {
+        flex-direction: column;
+    }
+    
+
 }
